--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        <h1>Give Your Planner<br>a hard time</h1>
+                        <h1>Give Your Planner<br>A New Style</h1>
                         <p> Success isn't always about greatness. It's about consistency. Consistent
                             <br>hard work gains success. Greatness will come</p>
                         <a href="" class="btn"> Explore Now</a>
